@@ -2226,6 +2226,15 @@
             "nadav"
          ]
       },
+      "Nael Ouedraogo" : {
+         "emails" : [
+           "nael.ouedraogo@crf.canon.fr",
+           "nael.ouedp@gmail.com"
+         ],
+         "nicks" : [
+            "nael"
+         ]
+      },
       "Naoki Takano" : {
          "emails" : [
             "honten@chromium.org",
