@@ -1,3 +1,9 @@
+2016-06-03  Nael Ouedraogo  <nael.ouedraogo@crf.canon.fr>
+
+        Unreviewed: add myself to the committers list.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2016-06-02  Per Arne Vollan  <pvollan@apple.com>
 
         [Win] Fetch API tests are failing.
